--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -3,7 +3,11 @@ TMUXCONFIG="$HOME/.config/tmux"
 set -g prefix C-space
 
 unbind r
-bind r source-file "$TMUXCONFIG/tmux.conf"; display "Reloaded"
+bind r { source-file "$TMUXCONFIG/tmux.conf"; display "Reloaded" }
+
+# Session cwd
+bind C new-window -c "#{pane_current_path}"
+bind M-c { attach-session -c "#{pane_current_path}"; display "Session Working Directory: #{pane_current_path}" }
 
 set -g base-index 1 # start indexing windows at 1 instead of 0
 setw -g pane-base-index 1
