--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -20,6 +20,7 @@ set -g @plugin 'christoomey/vim-tmux-navigator'
 set -g @plugin 'tmux-plugins/tmux-resurrect'
 set -g @plugin 'tmux-plugins/tmux-continuum'
 # Theme
+set -g @plugin 'catppuccin/tmux'
 source "$TMUXCONFIG/theme.conf"
 
 # Resurrect & Continuum
