--- a/.config/ohmyposh/config.toml
+++ b/.config/ohmyposh/config.toml
@@ -3,106 +3,113 @@
 version = 2
 final_space = true
 
+### NORMAL PROMPT
 [[blocks]]
-  type = "prompt"
-  alignment = "left"
+type = "prompt"
+alignment = "left"
 
-  [[blocks.segments]]
-    type = "os"
-    style = "plain"
-    foreground = "blue"
-    template = "{{ .Icon }} "
+[[blocks.segments]]
+type = "os"
+style = "plain"
+foreground = "p.prompt"
+template = "{{ .Icon }} "
 
+[[blocks.segments]]
+type = "path"
+style = "plain"
+background = "transparent"
+foreground = "p.prompt"
+template = "{{ path .Path .Location }} "
 
-  [[blocks.segments]]
-    type = "path"
-    style = "plain"
-    background = "transparent"
-    foreground = "blue"
-    template = "{{ path .Path .Location }} "
+[blocks.segments.properties]
+  style = "full"
+  home_icon = "󰋜"
+  folder_icon = "󰉋"
+  [blocks.segments.properties.mapped_locations]
+    "~/Downloads" = "󰉍/"
 
-    [blocks.segments.properties]
-      style = "full"
-      home_icon = "󰋜"
-      folder_icon = "󰉋"
-      [blocks.segments.properties.mapped_locations]
-      "~/Downloads" = "󰉍/"
+[[blocks.segments]]
+type = "git"
+style = "plain"
+background = "transparent"
+foreground = "p:pale"
+template = """{{if .HEAD }}\
+  {{ .UpstreamIcon }}{{ .HEAD }}\
+  {{ if or (.Working.Changed) (.Staging.Changed) }}*{{end}}\
+  <green>\
+  {{ if or (gt .Staging.Modified 0) (gt .Working.Modified 0)}} {{end}}\
+  {{ if gt .Staging.Modified 0 }}+{{ .Staging.Modified }}{{end}}\
+  {{ if gt .Working.Modified 0 }}!{{ .Working.Modified }}{{end}}\
+  </>\
+  <p:error>\
+  {{ if gt .Working.Untracked 0 }} ?{{ .Working.Untracked }}{{end}}\
+  </>\
+  <green>\
+  {{ if or (gt .Behind 0) (gt .Ahead 0)}} {{end}}\
+  {{ if gt .Behind 0 }}⇣{{.Behind}}{{end}}\
+  {{ if gt .Ahead 0 }}⇡{{.Ahead}}{{end}}\
+  </>\
+  {{end}}"""
 
-  [[blocks.segments]]
-    type = "git"
-    style = "plain"
-    background = "transparent"
-    foreground = "#aaaaaa"
-    template = """{{if .HEAD }}\
-      {{ .UpstreamIcon }}{{ .HEAD }}\
-      {{ if or (.Working.Changed) (.Staging.Changed) }}*{{end}}\
-      <green>\
-      {{ if or (gt .Staging.Modified 0) (gt .Working.Modified 0)}} {{end}}\
-      {{ if gt .Staging.Modified 0 }}+{{ .Staging.Modified }}{{end}}\
-      {{ if gt .Working.Modified 0 }}!{{ .Working.Modified }}{{end}}\
-      </>\
-      <red>\
-      {{ if gt .Working.Untracked 0 }} ?{{ .Working.Untracked }}{{end}}\
-      </>\
-      <green>\
-      {{ if or (gt .Behind 0) (gt .Ahead 0)}} {{end}}\
-      {{ if gt .Behind 0 }}⇣{{.Behind}}{{end}}\
-      {{ if gt .Ahead 0 }}⇡{{.Ahead}}{{end}}\
-      </>\
-    {{end}}"""
+[blocks.segments.properties]
+  fetch_status = true
+  commit_icon = "@"
 
-    [blocks.segments.properties]
-      fetch_status = true
-      commit_icon = "@"
-
-  [[blocks.segments]]
-    type = "text"
-    style = "plain"
-    foreground = "magenta"
-    template = "{{if .Env.TMUX }}  {{end}}"
+[[blocks.segments]]
+type = "text"
+style = "plain"
+foreground = "p:tip"
+template = "{{if .Env.TMUX }}  {{end}}"
   
-  [[blocks.segments]]
-    type = "text"
-    style = "plain"
-    foreground_templates = [
-      "{{if gt .Code 0}}red{{end}}",
-      "{{if eq .Code 0}}magenta{{end}}"
-    ]
-    background = "transparent"
-    template = "❯"
+[[blocks.segments]]
+type = "text"
+style = "plain"
+foreground_templates = [
+  "{{if gt .Code 0}}p:warn{{end}}",
+  "{{if eq .Code 0}}p:tip{{end}}"
+]
+background = "transparent"
+template = "❯"
 
+### RPROMPT
 [[blocks]]
-  type = "rprompt"
-  overflow = "hidden"
+type = "rprompt"
+overflow = "hidden"
 
-  [[blocks.segments]]
-    type = "cmake"
-    style = "plain"
-    background = "transparent"
-    foreground = "blue"
-    template = "  "
+[[blocks.segments]]
+type = "cmake"
+style = "plain"
+background = "transparent"
+foreground = "p:prompt"
+template = "  "
     
-  [[blocks.segments]]
-  type = "executiontime"
-  style = "plain"
-  foreground = "yellow"
-  background = "transparent"
-  template = "{{ .FormattedMs }} "
-    [blocks.segments.properties]
-      style = "round"
-      threshold = "5000"
+[[blocks.segments]]
+type = "executiontime"
+style = "plain"
+foreground = "p:warn"
+background = "transparent"
+template = "{{ .FormattedMs }} "
+[blocks.segments.properties]
+  style = "round"
+  threshold = "5000"
 
-  [[blocks.segments]]
-  type = "status"
-  style = "plain"
-  foreground = "red"
-  background = "transparent"
-  template = """{{ if .Error }}{{ if eq .Code 0 }}INT{{else}}ERR{{end}} {{.Code}}{{end}} """
+[[blocks.segments]]
+type = "status"
+style = "plain"
+foreground = "p:error"
+background = "transparent"
+template = """{{ if .Error }}{{ if eq .Code 0 }}INT{{else}}ERR{{end}} {{.Code}}{{end}} """
 
-
-
+### Secondary Prompt
 [secondary_prompt]
-  style = "plain"
-  foreground = "blue"
-  background = "transparent"
-  template = "❯❯ "
+style = "plain"
+foreground = "p:prompt"
+background = "transparent"
+template = "❯❯ "
+
+[palette]
+"prompt" = "blue"
+"tip" = "magenta"
+"error" = "red"
+"warn" = "yellow"
+"pale" = "#aaaaaa"
