--- a/.config/ohmyposh/config.toml
+++ b/.config/ohmyposh/config.toml
@@ -40,11 +40,12 @@ template = """{{if .HEAD }}\
   {{ if or (.Working.Changed) (.Staging.Changed) }}*{{end}}\
   <green>\
   {{ if or (gt .Staging.Modified 0) (gt .Working.Modified 0)}} {{end}}\
-  {{ if gt .Staging.Modified 0 }}+{{ .Staging.Modified }}{{end}}\
+  {{ if gt (add .Staging.Modified .Staging.Deleted) 0 }}+{{ add .Staging.Modified .Staging.Deleted}}{{end}}\
   {{ if gt .Working.Modified 0 }}!{{ .Working.Modified }}{{end}}\
   </>\
   <p:error>\
   {{ if gt .Working.Untracked 0 }} ?{{ .Working.Untracked }}{{end}}\
+  {{ if gt .Working.Deleted 0 }} -{{ .Working.Deleted }}{{end}}\
   </>\
   <green>\
   {{ if or (gt .Behind 0) (gt .Ahead 0)}} {{end}}\
