--- a/.config/alacritty/alacritty.toml
+++ b/.config/alacritty/alacritty.toml
@@ -4,6 +4,7 @@ import = [
 
 [env]
 TERM = "xterm-256color"
+WINIT_X11_SCALE_FACTOR = "1.0"
 
 [window]
 title = "Ceedrich's Terminal"
@@ -12,4 +13,4 @@ padding = { x = 5, y = 5 }
 
 [font]
 normal = { family = "JetBrainsMonoNerdFont Mono", style = "Regular" }
-size = 13
+size = 16
