--- a/polybar/.config/polybar/config.ini
+++ b/polybar/.config/polybar/config.ini
@@ -85,9 +85,9 @@ separator-foreground = ${colors.flamingo}
 
 font-0 = JetBrainsMonoNerdFont Mono:size=14;6
 
-modules-left = menu xwindow
+modules-left = xwindow
 modules-center = date
-modules-right = xworkspaces backlight audio battery wlan 
+modules-right = xworkspaces backlight audio battery wlan powermenu
 
 cursor-click = pointer
 cursor-scroll = ns-resize
@@ -104,23 +104,14 @@ tray-transparent = true
 
 ; override-redirect = true
 
-[module/menu]
-type = custom/menu
-expand-right = true
-label-open = 󰇙
-label-close = 󰖭
 
-menu-0-0 = Actions
-menu-0-0-exec = #menu.open.1
+; WARN: Depracated (update to 3.7.0)
+[module/powermenu]
+type = custom/text
+content = %{F#cba6f7}󰐥%{F-}
+format-foreground = ${colors.primary}
+click-left = if [ -n "$XDG_CONFIG_HOME" ]; then $XDG_CONFIG_HOME/rofi/scripts/powermenu.sh; else $HOME/.config/rofi/scripts/powermenu.sh; fi
 
-menu-1-0 = Logout
-menu-1-0-exec = i3-msg exit
-menu-1-1 = Shutdown
-menu-1-1-exec = shutdown now
-menu-1-2 = Reboot
-menu-1-2-exec = shutdown -r now
-
-label-separator = " "
 
 [module/systray]
 type = internal/tray
