--- a/i3/.config/i3/config
+++ b/i3/.config/i3/config
@@ -166,7 +166,7 @@ bindsym $mod+Shift+c reload
 # restart i3 inplace (preserves your layout/session, can be used to upgrade i3)
 bindsym $mod+Shift+r restart
 # exit i3 (logs you out of your X session)
-bindsym $mod+Shift+e exit
+bindsym $mod+Shift+q exec --no-startup-id "${XDG_CONFIG_HOME:-$HOME/.config}/rofi/scripts/powermenu.sh"
 
 # resize window (you can also use the mouse for that)
 mode "resize" {
