--- a/polybar/.config/polybar/config.ini
+++ b/polybar/.config/polybar/config.ini
@@ -147,7 +147,6 @@ type = internal/xworkspaces
 label-active = %name%
 label-active-background = ${colors.mauve}
 label-active-foreground = ${colors.crust}
-label-active-underline= ${colors.lauve}
 label-active-padding = 1
 
 label-occupied = %name%
@@ -165,6 +164,7 @@ type = internal/xwindow
 label = %title:0:30:...% 
 
 [module/backlight]
+# TODO: What even is backlight
 type = internal/backlight
 card = intel_backlight
 format = <label> <ramp>
@@ -219,13 +219,13 @@ ramp-capacity-2 = 󰁾
 ramp-capacity-3 = 󰂀
 ramp-capacity-4 = 󰂂
 low-at = 10
-battery = BAT0
-adapter = ADP0
+battery = ${env:p_BATTERY:BAT0}
+adapter = ${env:p_ADAPTER:ADP0}
 poll-interval = 5
 
 [module/wlan]
 type = internal/network
-interface = wlp0s20f3
+interface = ${env:p_WIRELESS}
 interface-type = wireless
 
 label-disconnected = 󰤭
