--- a/i3/.config/i3/config
+++ b/i3/.config/i3/config
@@ -13,7 +13,7 @@ for_window [class="^.*"] border pixel 1
 
 set $mod Mod4
 
-exec --no-startup-id picom --experimental-backends
+exec --no-startup-id "picom --experimental-backends || picom"
 exec --no-startup-id feh --bg-scale ${XDG_CONFIG_HOME:-$HOME/.config}/i3/wallpaper.jpg
 #exec --no-startup-id xrdb -merge ~/.Xresources
 #exec_always --no-startup-id setxkbmap -option ctrl:nocaps
