Added Tmux Session Manager (TMS), a script that starts tmux sessions based on certain configurations

--- a/tmux/.config/tmux/tmux.conf
+++ b/tmux/.config/tmux/tmux.conf
@@ -4,6 +4,7 @@ set -g prefix C-space
 
 unbind r
 bind r { source-file "$TMUXCONFIG/tmux.conf"; display "Reloaded" }
+bind X { confirm-before -p "kill-session? (y/n)" kill-session }
 
 # Session cwd
 bind C new-window -c "#{pane_current_path}"
