Added bluetooth menu

--- a/polybar/.config/polybar/config.ini
+++ b/polybar/.config/polybar/config.ini
@@ -5,6 +5,7 @@ include-file = modules/window.ini
 include-file = modules/backlight.ini
 include-file = modules/battery.ini
 include-file = modules/wlan.ini
+include-file = modules/bluetooth.ini
 include-file = modules/date.ini
 
 include-file = modules/tray.ini
@@ -14,7 +15,7 @@ include-file = modules/powermenu.ini
 include-file = modules/bar.ini
 modules-left = window
 modules-center = date
-modules-right = workspaces backlight audio battery wlan powermenu tray
+modules-right = workspaces backlight audio battery wlan bluetooth powermenu tray
 
 
 [settings]
