--- a/polybar/.config/polybar/modules/bluetooth.ini
+++ b/polybar/.config/polybar/modules/bluetooth.ini
@@ -1,7 +1,5 @@
-; TODO: Make bluetooth work
 [module/bluetooth]
 type = custom/script
-exec = ${$XDG_CONFIG_HOME:-$HOME/.config}/polybar/scripts/system-bluetooth-bluetoothctl.sh
+exec = "echo 󰂯"
 tail = true
-click-left = ${$XDG_CONFIG_HOME:-$HOME/.config}/polybar/scripts/system-bluetooth-bluetoothctl.sh --toggle &
-
+click-left = if [ -d "$XDG_CONFIG_HOME" ]; then $XDG_CONFIG_HOME/rofi/scripts/bluetooth.sh; else $HOME/.config/rofi/scripts/bluetooth.sh; fi
