--- a/polybar/.config/polybar/config_OLD.ini
+++ b/polybar/.config/polybar/config_OLD.ini
@@ -6,6 +6,7 @@ include-file = ~/.config/polybar/modules/workspaces.ini
 include-file = ~/.config/polybar/modules/window.ini
 include-file = ~/.config/polybar/modules/backlight.ini
 include-file = ~/.config/polybar/modules/battery.ini
+include-file = ~/.config/polybar/modules/bluetooth.ini
 include-file = ~/.config/polybar/modules/wlan.ini
 include-file = ~/.config/polybar/modules/date.ini
 
@@ -16,7 +17,7 @@ include-file = ~/.config/polybar/modules/powermenu_OLD.ini
 [bar/toph]
 modules-left = window
 modules-center = date
-modules-right = workspaces backlight audio battery wlan powermenu
+modules-right = workspaces backlight audio battery wlan bluetooth powermenu
 
 [settings]
 screenchange-reload = true
