--- a/polybar/.config/polybar/modules/bluetooth.ini
+++ b/polybar/.config/polybar/modules/bluetooth.ini
@@ -1,7 +1,7 @@
 [module/bluetooth]
 type = custom/script
-exec = if [ -d "$XDG_CONFIG_HOME" ]; then $XDG_CONFIG_HOME/rofi/scripts/bluetooth.sh --status; else $HOME/.config/rofi/scripts/bluetooth.sh --status; fi
+exec = bluetooth_menu --status
 tail = true
-click-left = if [ -d "$XDG_CONFIG_HOME" ]; then $XDG_CONFIG_HOME/rofi/scripts/bluetooth.sh; else $HOME/.config/rofi/scripts/bluetooth.sh; fi
+click-left = bluetooth_menu
 
 format = %{F#cba6f7}󰂯%{F-} <label>
