--- a/polybar/.config/polybar/modules/powermenu.ini
+++ b/polybar/.config/polybar/modules/powermenu.ini
@@ -2,4 +2,4 @@
 type = custom/text
 format-foreground = ${colors.primary}
 label = 󰐥
-click-left = if [ -d "$XDG_CONFIG_HOME" ]; then $XDG_CONFIG_HOME/rofi/scripts/powermenu.sh; else $HOME/.config/rofi/scripts/powermenu.sh; fi
+click-left = power_menu
