--- a/polybar/.config/polybar/modules/powermenu_OLD.ini
+++ b/polybar/.config/polybar/modules/powermenu_OLD.ini
@@ -2,5 +2,5 @@
 type = custom/text
 content = %{F#cba6f7}󰐥%{F-}
 format-foreground = ${colors.primary}
-click-left = if [ -d "$XDG_CONFIG_HOME" ]; then $XDG_CONFIG_HOME/rofi/scripts/powermenu.sh; else $HOME/.config/rofi/scripts/powermenu.sh; fi
+click-left = power_menu
 
