Added Kitty and Yazi

--- a/tmux/.config/tmux/tmux.conf
+++ b/tmux/.config/tmux/tmux.conf
@@ -6,6 +6,12 @@ unbind r
 bind r { source-file "$TMUXCONFIG/tmux.conf"; display "Reloaded" }
 bind X { confirm-before -p "kill-session? (y/n)" kill-session }
 
+# Enable Kitty Image Preview
+set -g allow-passthrough on
+
+set -ga update-environment TERM
+set -ga update-environment TERM_PROGRAM
+
 # Session cwd
 bind C new-window -c "#{pane_current_path}"
 bind M-c { attach-session -c "#{pane_current_path}"; display "Session Working Directory: #{pane_current_path}" }
