update polybar date config

--- a/polybar/.config/polybar/config.ini
+++ b/polybar/.config/polybar/config.ini
@@ -7,13 +7,14 @@ include-file = modules/battery.ini
 include-file = modules/wlan.ini
 include-file = modules/bluetooth.ini
 include-file = modules/date.ini
+include-file = modules/date2.ini
 
 include-file = modules/tray.ini
 include-file = modules/powermenu.ini
 
 [bar/toph]
 include-file = modules/bar.ini
-modules-left = window
+modules-left = date2 window
 modules-center = date
 modules-right = workspaces backlight audio battery wlan bluetooth powermenu tray
 
