--- a/nixos/homemanagerModules/hyprland/waybar/config.json
+++ b/nixos/homemanagerModules/hyprland/waybar/config.json
@@ -2,7 +2,7 @@
   "position": "top",
   "modules-left": ["hyprland/workspaces"],
   "modules-center": ["hyprland/window"],
-  "modules-right": ["network", "clock"],
+  "modules-right": ["network", "clock", "tray"],
   "clock": {
     "format": "  {:%a %d %H:%M}",
     "tooltip-format": "<tt><small>{calendar}</small></tt>"
@@ -11,5 +11,9 @@
     "format-wifi": "<span size='13000'> </span> {essid}",
     "format-ethernet": "<span size='13000'>󰤭 </span> Disconnected",
     "format-disconnected": "<span size='13000'>󰤭 </span> Disconnected"
+  },
+  "tray": {
+    "icon-size": 21,
+    "spacing": 10
   }
 }
