--- a/nixos/homemanagerModules/hyprland/waybar/config.json
+++ b/nixos/homemanagerModules/hyprland/waybar/config.json
@@ -2,7 +2,7 @@
   "position": "top",
   "modules-left": ["hyprland/workspaces"],
   "modules-center": ["hyprland/window"],
-  "modules-right": ["network", "clock", "tray"],
+  "modules-right": ["network", "clock", "pulseaudio", "tray"],
   "clock": {
     "format": "  {:%a %d %H:%M}",
     "tooltip-format": "<tt><small>{calendar}</small></tt>"
@@ -11,6 +11,22 @@
     "format-wifi": "<span size='13000'> </span> {essid}",
     "format-ethernet": "<span size='13000'>󰤭 </span> Disconnected",
     "format-disconnected": "<span size='13000'>󰤭 </span> Disconnected"
+  },
+  "pulseaudio": {
+    "format": "{volume}% {icon}",
+    "format-bluetooth": "{volume}% {icon}",
+    "format-muted": "",
+    "format-icons": {
+      "headphone": "",
+      "phone": "",
+      "phone-muted": "",
+      "portable": "",
+      "car": "",
+      "default": ["", ""]
+    },
+    "scroll-step": 1,
+    "on-click": "pavucontrol",
+    "ignored-sinks": ["Easy Effects Sink"]
   },
   "tray": {
     "icon-size": 21,
