--- a/nixos/homemanagerModules/hyprland/waybar/config.json
+++ b/nixos/homemanagerModules/hyprland/waybar/config.json
@@ -2,30 +2,20 @@
   "position": "top",
   "modules-left": ["hyprland/workspaces"],
   "modules-center": ["hyprland/window"],
-  "modules-right": ["network", "clock", "pulseaudio", "tray"],
+  "modules-right": ["pulseaudio", "clock", "tray"],
   "clock": {
     "format": "  {:%a %d %H:%M}",
     "tooltip-format": "<tt><small>{calendar}</small></tt>"
   },
-  "network": {
-    "format-wifi": "<span size='13000'> </span> {essid}",
-    "format-ethernet": "<span size='13000'>󰤭 </span> Disconnected",
-    "format-disconnected": "<span size='13000'>󰤭 </span> Disconnected"
-  },
   "pulseaudio": {
     "format": "{volume}% {icon}",
     "format-bluetooth": "{volume}% {icon}",
-    "format-muted": "",
+    "format-muted": "{volume}% 󰝟",
     "format-icons": {
-      "headphone": "",
-      "phone": "",
-      "phone-muted": "",
-      "portable": "",
-      "car": "",
-      "default": ["", ""]
+      "default": ["󰖀", "󰕾"]
     },
-    "scroll-step": 1,
-    "on-click": "pavucontrol",
+    "scroll-step": 3,
+    "on-click": "wpctl set-mute @DEFAULT_SINK@ toggle",
     "ignored-sinks": ["Easy Effects Sink"]
   },
   "tray": {
