--- a/nixos/homemanagerModules/hyprland/waybar/config.json
+++ b/nixos/homemanagerModules/hyprland/waybar/config.json
@@ -2,7 +2,7 @@
   "position": "top",
   "modules-left": ["hyprland/workspaces"],
   "modules-center": ["hyprland/window"],
-  "modules-right": ["pulseaudio", "clock", "tray"],
+  "modules-right": ["pulseaudio", "clock", "group/powermenu", "tray"],
   "clock": {
     "format": "  {:%a %d %H:%M}",
     "tooltip-format": "<tt><small>{calendar}</small></tt>"
@@ -17,6 +17,35 @@
     "scroll-step": 3,
     "on-click": "wpctl set-mute @DEFAULT_SINK@ toggle",
     "on-click-right": "pavucontrol"
+  },
+  "group/powermenu": {
+    "orientation": "inherit",
+    "drawer": {
+      "transition-duration": 500,
+      "children-class": "not-power",
+      "transition-left-to-right": false
+    },
+    "modules": ["custom/power", "custom/logout", "custom/lock", "custom/reboot"]
+  },
+  "custom/logout": {
+    "format": "󰍃",
+    "tooltip-format": "Logout",
+    "on-click": "hyprctl dispatch exit"
+  },
+  "custom/lock": {
+    "format": "󰌾",
+    "tooltip-format": "Lock",
+    "on-click": "hyprlock"
+  },
+  "custom/reboot": {
+    "format": "󰜉",
+    "tooltip-format": "Reboot",
+    "on-click": "reboot"
+  },
+  "custom/power": {
+    "format": "󰐥",
+    "tooltip-format": "Power Off",
+    "on-click": "shutdown now"
   },
   "tray": {
     "icon-size": 21,
