--- a/polybar/.config/polybar/modules/bluetooth.ini
+++ b/polybar/.config/polybar/modules/bluetooth.ini
@@ -1,7 +1,7 @@
 [module/bluetooth]
 type = custom/script
-exec = bluetooth_menu --status
+exec = $HOME/.local/scripts/bluetooth_menu --status
 tail = true
-click-left = bluetooth_menu
+click-left = $HOME/.local/scripts/bluetooth_menu
 
 format = %{F#cba6f7}󰂯%{F-} <label>
