--- a/i3/.config/i3/config
+++ b/i3/.config/i3/config
@@ -10,6 +10,7 @@
 # Please see https://i3wm.org/docs/userguide.html for a complete reference!
 
 for_window [class="^.*"] border pixel 1
+for_window [class="^pavucontrol$"] floating enable
 
 set $mod Mod4
 
@@ -19,21 +20,19 @@ exec_always --no-startup-id feh --bg-scale ${XDG_CONFIG_HOME:-$HOME/.config}/i3/
 #exec_always --no-startup-id setxkbmap -option ctrl:nocaps
 
 # kill any hanging polybar processes
-exec_always killall polybar
-exec_always --no-startup-id launch_polybar
+exec_always --no-startup-id $HOME/.local/scripts/launch_polybar
 
 # Touchpad settings
 exec_always --no-startup-id xinput set-prop $(xinput list | grep -i "touchpad" | grep -o "id=[0-9]*" | grep -o "[0-9]*") "libinput Natural Scrolling Enabled" 1
 exec_always --no-startup-id xinput set-prop $(xinput list | grep -i "touchpad" | grep -o "id=[0-9]*" | grep -o "[0-9]*") "libinput Tapping Enabled" 1
 
-#bindsym Print exec maim "/home/$USER/Pictures/$(date).jpg"
-#bindsym $mod+Print exec maim --window $(xdotool getactivewindow) "/home/$USER/Pictures/$(date).jpg"
-#bindsym Shift+Print exec maim --select "/home/$USER/Pictures/$(date).jpg"
+exec_always killall notify-battery
+exec_always --no-startup-id notify-battery &
 
-## Clipboard Screenshots
-#bindsym Ctrl+Print exec maim | xclip -selection clipboard -t image/png
-#bindsym Ctrl+$mod+Print exec maim --window $(xdotool getactivewindow) | xclip -selection clipboard -t image/png
-#bindsym Ctrl+Shift+Print exec maim --select | xclip -selection clipboard -t image/png
+## Screenshots
+bindsym $mod+Print exec "maim -losc 1,1,1,0.2 | xclip -selection clipboard -t image/png"
+bindsym Print exec "maim -losc 1,1,1,0.2 \
+  \\"/home/$USER/Pictures/Screenshots/Screenshot from $(date +\\"%F %H-%M-%S\\").png\\""
 
 # Font for window titles. Will also be used by the bar unless a different font
 # is used in the bar {} block below.
@@ -52,18 +51,17 @@ exec --no-startup-id dex --autostart --environment i3
 
 # xss-lock grabs a logind suspend inhibit lock and will use i3lock to lock the
 # screen before suspend. Use loginctl lock-session to lock your screen.
-exec --no-startup-id xss-lock --transfer-sleep-lock -- i3lock --nofork
+exec --no-startup-id "xss-lock --transfer-sleep-lock -- i3lock --nofork -e -c #1e1e2e"
 
 # NetworkManager is the most popular way to manage wireless networks on Linux,
 # and nm-applet is a desktop environment-independent system tray GUI for it.
 exec --no-startup-id nm-applet
 
 # Use pactl to adjust volume in PulseAudio.
-set $refresh_i3status killall -SIGUSR1 i3status
-bindsym XF86AudioRaiseVolume exec --no-startup-id pactl set-sink-volume @DEFAULT_SINK@ +5% && $refresh_i3status
-bindsym XF86AudioLowerVolume exec --no-startup-id pactl set-sink-volume @DEFAULT_SINK@ -5% && $refresh_i3status
-bindsym XF86AudioMute exec --no-startup-id pactl set-sink-mute @DEFAULT_SINK@ toggle && $refresh_i3status
-bindsym XF86AudioMicMute exec --no-startup-id pactl set-source-mute @DEFAULT_SOURCE@ toggle && $refresh_i3status
+bindsym XF86AudioRaiseVolume exec --no-startup-id wpctl set-volume -l 1.0 @DEFAULT_SINK@ 5%+
+bindsym XF86AudioLowerVolume exec --no-startup-id wpctl set-volume -l 1.0 @DEFAULT_SINK@ 5%-
+bindsym XF86AudioMute exec --no-startup-id wpctl set-mute @DEFAULT_SINK@ toggle
+bindsym XF86AudioMicMute exec --no-startup-id wpctl set-mute @DEFAULT_SOURCE@ toggle
 bindsym XF86MonBrightnessUp exec --no-startup-id brightnessctl set +5%
 bindsym XF86MonBrightnessDown exec --no-startup-id brightnessctl set 5%-
 
@@ -71,16 +69,14 @@ bindsym XF86MonBrightnessDown exec --no-startup-id brightnessctl set 5%-
 floating_modifier $mod
 
 # start a terminal
-bindsym $mod+Return exec kitty
+bindsym $mod+Return exec nixGLIntel ghostty
 
 # kill focused window
 bindsym $mod+q kill
 
 # start rofi (a program launcher)
-#bindsym $mod+d exec --no-startup-id dmenu_run
-bindsym $mod+d exec --no-startup-id rofi -show drun
-bindsym $mod+space exec --no-startup-id rofi -show combi
-bindsym $mod+Tab exec --no-startup-id rofi -show window
+bindsym $mod+space exec --no-startup-id rofi -show drun -show-icons
+bindsym $mod+period exec --no-startup-id rofi -modi emoji -show emoji
 
 # change focus
 bindsym $mod+h focus left
@@ -117,16 +113,16 @@ bindsym $mod+Shift+space floating toggle
 
 # Define names for default workspaces for which we configure key bindings later on.
 # We use variables to avoid repeating the names in multiple places.
-set $ws1 "1 "
-set $ws2 "2 󰇮"
-set $ws3 "3 󰇄"
-set $ws4 "4 󰇄"
-set $ws5 "5 󰍳"
+set $ws1 "1"
+set $ws2 "2"
+set $ws3 "3"
+set $ws4 "4"
+set $ws5 "5"
 set $ws6 "6"
 set $ws7 "7"
 set $ws8 "8"
-set $ws9 "9 󰓇"
-set $ws10 "10 󰒓"
+set $ws9 "9"
+set $ws10 "10"
 
 # switch to workspace
 bindsym $mod+1 workspace $ws1
@@ -156,12 +152,12 @@ bindsym $mod+Shift+0 move container to workspace $ws10
 bindsym $mod+Shift+c reload
 # restart i3 inplace (preserves your layout/session, can be used to upgrade i3)
 bindsym $mod+Shift+r restart
-# exit i3 (logs you out of your X session)
-bindsym $mod+Shift+q exec --no-startup-id power_menu
+# exit i3 
+bindsym $mod+Shift+q exec --no-startup-id power-menu
 # Bluetooth Settings
-bindsym $mod+Shift+b exec --no-startup-id bluetooth_menu
+bindsym $mod+Shift+b exec --no-startup-id $HOME/.local/scripts/bluetooth_menu
 # Screen Settings
-bindsym $mod+Shift+s exec --no-startup-id screens
+bindsym $mod+Shift+s exec --no-startup-id $HOME/.local/scripts/screens
 
 # resize window (you can also use the mouse for that)
 mode "resize" {
