--- a/picom/.config/picom/picom.conf
+++ b/picom/.config/picom/picom.conf
@@ -12,10 +12,12 @@ blur-strength = 1;
 
 # find with xprop | grep -i class
 opacity-rule = [
-  "90:class_g = 'Alacritty' && focused",
-  "80:class_g = 'Alacritty' && !focused",
-  "90:class_g = 'kitty' && focused",
-  "80:class_g = 'kitty' && !focused"
+  # "90:class_g = 'Alacritty' && focused",
+  # "80:class_g = 'Alacritty' && !focused",
+  # "90:class_g = 'kitty' && focused",
+  # "80:class_g = 'kitty' && !focused"
+  "90:class_g = 'ghostty' && focused",
+  "80:class_g = 'ghostty' && !focused"
 ];
 
 # Fading
