update polybar config to work with nioxs and enable scrolling for backlight

--- a/polybar/.config/polybar/modules/backlight.ini
+++ b/polybar/.config/polybar/modules/backlight.ini
@@ -4,6 +4,7 @@ type = internal/backlight
 card = intel_backlight
 format = <label> <ramp>
 
+enable-scroll = true
 ramp-foreground = ${colors.primary}
 
 ramp-0 = 󱩎
