--- a/polybar/.config/polybar/modules/powermenu.ini
+++ b/polybar/.config/polybar/modules/powermenu.ini
@@ -2,4 +2,4 @@
 type = custom/text
 format-foreground = ${colors.primary}
 label = 󰐥
-click-left = $HOME/.local/scripts/power_menu
+click-left = power-menu
