remove bluetooth module from polybar

--- a/polybar/.config/polybar/config.ini
+++ b/polybar/.config/polybar/config.ini
@@ -5,7 +5,7 @@ include-file = modules/window.ini
 include-file = modules/backlight.ini
 include-file = modules/battery.ini
 include-file = modules/wlan.ini
-include-file = modules/bluetooth.ini
+# include-file = modules/bluetooth.ini
 include-file = modules/date.ini
 include-file = modules/date2.ini
 
@@ -16,7 +16,7 @@ include-file = modules/powermenu.ini
 include-file = modules/bar.ini
 modules-left = date2 window
 modules-center = date
-modules-right = workspaces backlight audio battery wlan bluetooth powermenu tray
+modules-right = workspaces backlight audio battery wlan powermenu tray
 
 
 [settings]
