--- a/picom/.config/picom/picom.conf
+++ b/picom/.config/picom/picom.conf
@@ -7,6 +7,10 @@ active-opacity = 1;
 inactive-opacity = 1;
 blur-background = true;
 
+blur-background-exclude = [
+  "class_g = 'slop'"
+]
+
 blur-method = "dual_kawase"; 
 blur-strength = 1;
 
